--- a/views/ecdsa.hbs
+++ b/views/ecdsa.hbs
@@ -3,8 +3,7 @@
     <h1>The total number of ECDSA Nodes is {{data.ecdsaNum}}</h1>
     <ul class="list-group">
         {{#each data.ecdsaID}}
-        <li class="list-group-item"><a href="/ecdsa/{{this}}">{{this}}</a></li>
+        <li class="list-group-item" style="overflow:hidden; text-overflow:ellipsis"><a href="/ecdsa/{{this}}">{{this}}</a></li>
         {{/each}}
     </ul>
 </div>
-{{>footer}}
