--- a/views/ecdsa_id.hbs
+++ b/views/ecdsa_id.hbs
@@ -4,7 +4,7 @@
     <ul class="list-group">
         {{#each data.ecdsaTx}}
         {{!-- <li class="list-group-item"><a href="{{data.url}}/tx/{{this}}">{{this}}</a></li> --}}
-        <li class="list-group-item" style="overflow:hidden; text-overflow:ellipsis"><a href="https://ropsten.etherscan.io/tx/{{this}}">{{this}}</a></li>
+        <li class="list-group-item" style="overflow:hidden; text-overflow:ellipsis"><a href="https://etherscan.io/tx/{{this}}">{{this}}</a></li>
         {{/each}}
     </ul>
 </div>
